# sp1-eof

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  solidity.yml
revm/program/: Cargo.toml
revm/program/elf/: riscv32im-succinct-zkvm-elf
revm/program/src/: main.rs
revm/program_legacy/: Cargo.toml
revm/program_legacy/elf/: riscv32im-succinct-zkvm-elf
revm/program_legacy/src/: main.rs
revm/script/: Cargo.toml  build.rs
revm/script/src/: main.rs
solidity/: Dockerfile  foundry.toml
solidity/src/: Fib.sol
solidity/test/: Fib.t.sol
