[workspace]
members = [
  "revm/script",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"

[workspace.dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev"}
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }